--- a/index.html
+++ b/index.html
@@ -4,10 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Common C</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Data Visualisering med Chart.js</h1>
-<canvas id="myChart" width="400" height="200"></canvas>
+
+<div class="main_container">
+    <div class="main_text_container">
+        <h1 class="main_title">the Public <br> on Ukraine</h1>
+
+    </div>
+
+</div>
+
+<div class="second_container">
+    <div class="second_graph_container">
+        <div class="second_graph_one">
+
+        </div>
+
+        <div class="second_graph_two">
+
+        </div>
+
+    </div>
+
+</div>
+
+<div class="third_container">
+
+
+</div>
+
+<div class="fourth_container">
+
+
+</div>
+
+<canvas id="myChart" width="400" height=200"></canvas>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>
