--- a/index.html
+++ b/index.html
@@ -4,42 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Common C</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
 <h1>Data Visualisering med Chart.js</h1>
-<canvas id="myChart" width="400" height="200"></canvas>
-
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script>
-    fetch('/api/data')
-        .then(response => response.json())
-        .then(data => {
-            const labels = data.map(item => item.label_kolonne);
-            const values = data.map(item => item.value_kolonne);
-
-            const ctx = document.getElementById('myChart').getContext('2d');
-            const myChart = new Chart(ctx, {
-                type: 'bar',
-                data: {
-                    labels: labels,
-                    datasets: [{
-                        label: 'Dataset',
-                        data: values,
-                        backgroundColor: "",
-                        borderColor: "",
-                        borderWidth: 1
-                    }]
-                },
-                options: {
-                    scales: {
-                        y: {
-                            beginAtZero: true
-                        }
-                    }
-                }
-            });
-        })
-        .catch(error => console.error('Fejl:', error));
-</script>
+<canvas id="myChart" width="auto" height="100%"></canvas>
+<script type="module" src="main.js"></script>
 </body>
 </html>
