1st draft, more inclusions

--- a/index.html
+++ b/index.html
@@ -31,11 +31,29 @@
 </div>
 
 <div class="third_container">
+    <div class="third_graph_container">
+        <div class="third_graph_one">
+
+        </div>
+    </div>
+    <div class="third_text_container">
+
+    </div>
 
 
 </div>
 
 <div class="fourth_container">
+    <div class="fourth_graph_container">
+        <div class="fourth_graph_one">
+
+        </div>
+    </div>
+
+    <div class="fourth_text_container">
+
+
+    </div>
 
 
 </div>
