made the really sexy functions to add dataests and labels to the chartobjects

--- a/index.html
+++ b/index.html
@@ -17,17 +17,19 @@
 </div>
 
 <div class="second_container">
-    <div class="second_graph_container">
-        <div class="second_graph_one">
-
+    <div>
+        <p>Ukraine forsvinder fra offentlig bevidsthed!</p>
+        <div>
+            <div>
+                <canvas></canvas>
+                <p></p>
+            </div>
+            <div>
+                <canvas></canvas>
+                <p></p>
+            </div>
         </div>
-
-        <div class="second_graph_two">
-
-        </div>
-
     </div>
-
 </div>
 
 <div class="third_container">
