made progress on the chart container 2

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <p>Ukraine forsvinder fra offentlig bevidsthed!</p>
         <div>
             <div>
-                <canvas></canvas>
+                <canvas height="350"></canvas>
                 <p></p>
             </div>
             <div>
-                <canvas></canvas>
+                <canvas height="350"></canvas>
                 <p></p>
             </div>
         </div>
