updata html to h2 use

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <div class="second_container">
     <div>
-        <p>Ukraine forsvinder fra offentlig bevidsthed!</p>
+        <h2>Ukraine forsvinder fra offentlig bevidsthed!</h2>
         <div>
             <div>
                 <canvas height="350"></canvas>
@@ -33,30 +33,10 @@
 </div>
 
 <div class="third_container">
-    <div class="third_graph_container">
-        <div class="third_graph_one">
-
-        </div>
-    </div>
-    <div class="third_text_container">
-
-    </div>
-
 
 </div>
 
 <div class="fourth_container">
-    <div class="fourth_graph_container">
-        <div class="fourth_graph_one">
-
-        </div>
-    </div>
-
-    <div class="fourth_text_container">
-
-
-    </div>
-
 
 </div>
 
