--- a/index.html
+++ b/index.html
@@ -33,10 +33,32 @@
 </div>
 
 <div class="third_container">
+    <div class="third_container_header">
+    <h2>Hvad kan man gøre for at nå ud til den bredere befolkning?</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias ipsum iste odit possimus quas quia rem totam vero? Accusantium ad amet doloribus eius enim et obcaecati placeat quae tempore, voluptatibus?</p>
+    </div>
+    <div class="third_graph_container">
+        <div class="third_graph_one">
 
+        </div>
+    </div>
+    <div class="third_text_container">
+
+    </div>
 </div>
 
 <div class="fourth_container">
+    <div class="fourth_graph_container">
+        <div class="fourth_graph_one">
+
+        </div>
+    </div>
+
+    <div class="fourth_text_container">
+
+
+    </div>
+
 
 </div>
 
