--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<canvas id="myChart"></canvas>
 <script type="module" src="main.js"></script>
 </body>
 </html>
