--- a/index.html
+++ b/index.html
@@ -34,12 +34,11 @@
 
 <div class="third_container">
     <div class="third_container_color">
+        <div class="third-page-main_content">
+            <h2>Hvad kan man gøre for at nå ud til den bredere befolkning?</h2>
+        </div>
     </div>
     <div class="third_graph_container">
-        <div class="main_contents">
-        <h2>Hvad kan man gøre for at nå ud til den bredere befolkning?</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias ipsum iste odit possimus quas quia rem totam vero? Accusantium ad amet doloribus eius enim et obcaecati placeat quae tempore, voluptatibus?</p>
-        </div>
         <div class="third_graph_one">
 
         </div>
