--- a/index.html
+++ b/index.html
@@ -35,16 +35,10 @@
 <div class="third_container">
     <div class="third_container_color">
         <div class="third-page-main_content">
-            <h2>Hvad kan man gøre for at nå ud til den bredere befolkning?</h2>
+            <h2><span>Hvad</span> kan man gøre for at nå ud til <br> den bredere befolkning?</h2>
         </div>
     </div>
     <div class="third_graph_container">
-        <div class="third_graph_one">
-
-        </div>
-    </div>
-    <div class="third_text_container">
-
     </div>
 </div>
 
