--- a/index.html
+++ b/index.html
@@ -59,8 +59,18 @@
     </div>
 </div>
 
+<div class="fifth_container">
+<div>
+    <h2>Hvilket category (Medie, Sociatal, Politiker) får gennemsnitligt flest reaktioner</h2>
+</div>
+<div>
+    <div>
+        <canvas></canvas>
+    </div>
+</div>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<canvas id="myChart"></canvas>
 <script type="module" src="main.js"></script>
 </body>
 </html>
