did some stuff til chart 4

--- a/index.html
+++ b/index.html
@@ -44,11 +44,13 @@
 
 <div class="fourth_container">
     <div>
-        <h2>Hvilken slags Post når længst</h2>
-    </div>
-    <div>
         <div>
-            <canvas></canvas>
+            <h2>Videoer og statusopdateringer rækker længst!</h2>
+        </div>
+        <div>
+            <div>
+                <canvas></canvas>
+            </div>
         </div>
     </div>
 </div>
