--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <canvas id="myChart" width="auto" height="100%"></canvas>
+<canvas id="wordChart" width="auto" height="100%"></canvas>
 <script type="module" src="main.js"></script>
 </body>
 </html>
