--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
         </div>
     </div>
 </div>
-
+<div class="map_page">
+    <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, quia!</h2>
+</div>
+<div class="map_container">
+<div id="map"></div>
+<div id="tooltip" class="tooltip"></div>
+</div>
 <div class="third_container">
     <div class="third_container_color">
         <div class="third-page-main_content">
@@ -68,6 +74,8 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://d3js.org/d3.v7.min.js"></script>
+<script src="map.js"></script>
 <canvas id="myChart" width="auto" height="100%"></canvas>
 <canvas id="wordChart" width="auto" height="100%"></canvas>
 <script type="module" src="main.js"></script>
