--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://d3js.org/d3.v7.min.js"></script>
-<script src="map.js"></script>
+<script src="euro-map.js"></script>
 <canvas id="myChart" width="auto" height="100%"></canvas>
 <canvas id="wordChart" width="auto" height="100%"></canvas>
 <script type="module" src="main.js"></script>
