Jeppe bar chart fix32e

--- a/index.html
+++ b/index.html
@@ -71,13 +71,24 @@
 
 <div class="fifth_container">
 <div>
-    <h2>Hvilket category  (Medie, Sociatal, Politiker) får gennemsnitligt flest reaktioner</h2>
+    <h2>Politikere får gennemsnitligt flest reaktioner!</h2>
 </div>
 <div>
     <div>
         <canvas></canvas>
     </div>
 </div>
+</div>
+
+<div class="sixth_container">
+    <div>
+        <h2>Hvor langt bør et opslag være for at få flest reaktioner?</h2>
+    </div>
+    <div>
+        <div>
+            <canvas></canvas>
+        </div>
+    </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
