--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <div class="map_page">
     <div class="map_tekst_container">
     <div class="map_header">
-    <h2>"Hvordan kan vi forhindre, at Ukraine glider ud af den offentlige bevidsthed? </h2>
+    <h2>Hvordan kan vi forhindre, at Ukraine glider ud af den offentlige bevidsthed? </h2>
     </div>
     <div class="map_tekst">
     <p>Denne visualisering viser, hvordan politikere, der støtter Ukraine, har bidraget med opslag og skabt engagement i forskellige lande. Hold musen over et land for at se, hvor mange opslag og interaktioner det har genereret. Dataen giver mulighed for at forstå, hvor indsatsen er stærkest, og hvilke områder der kræver mere fokus for at holde Ukraine på dagsordenen."</p>
