small text and styling changes

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 <div class="fifth_container">
 <div>
-    <h2>Politikere får gennemsnitligt flest reaktioner!</h2>
+    <h2>Politikere eller nyhedsmedier er den mest effektive kommunikations fremgangsmåde</h2>
 </div>
 <div>
     <div>
