--- a/index.html
+++ b/index.html
@@ -56,6 +56,17 @@
     </div>
 </div>
 
+<div class="top_word_container">
+    <div>
+        <h2>De mest anvendte ord i opslag</h2>
+    </div>
+    <div>
+        <div>
+            <canvas id="wordChart"></canvas>
+        </div>
+    </div>
+</div>
+
 <div class="fourth_container">
     <div>
         <div>
@@ -95,7 +106,7 @@
 <script src="https://d3js.org/d3.v7.min.js"></script>
 <script src="euro-map.js"></script>
 <canvas id="myChart" width="auto" height="100%"></canvas>
-<canvas id="wordChart" width="auto" height="100%"></canvas>
+<canvas id="" width="auto" height="100%"></canvas>
 <script type="module" src="main.js"></script>
 </body>
 </html>
