--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
     </div>
 </div>
 </div>
-
+<div class="hashtag_container">
+    <div></div>
+</div>
 <div class="sixth_container">
     <div>
         <h2>Hvor langt bør et opslag være for at få flest reaktioner?</h2>
