begin to make hashtag container

--- a/index.html
+++ b/index.html
@@ -87,7 +87,16 @@
 </div>
 </div>
 <div class="hashtag_container">
-    <div></div>
+    <div>
+        <div>
+            <h2>Hashtags</h2>
+        </div>
+        <div>
+            <div>
+                <canvas></canvas>
+            </div>
+        </div>
+    </div>
 </div>
 <div class="sixth_container">
     <div>
