--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <div class="hashtag_container">
     <div>
         <div>
-            <h2>Hashtags</h2>
+            <h2>Do not use hashtags in your facebookpost!</h2>
         </div>
         <div>
             <div>
