--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="da">
+<html lang="da" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,6 @@
 <div class="front_page_container">
     <div class="front_page_text_container">
         <h1 class="main_title">the Public <br> on Ukraine</h1>
-
     </div>
 
 </div>
@@ -35,7 +34,7 @@
 <div class="map_page">
     <div class="map_tekst_container">
     <h2>Hvordan kan vi forhindre, at Ukraine glider ud af den offentlige bevidsthed? </h2>
-    <p>Denne visualisering viser, hvordan politikere, der støtter Ukraine, har bidraget med opslag og skabt engagement i forskellige lande. Hold musen over et land for at se, hvor mange opslag og interaktioner det har genereret. Dataen giver mulighed for at forstå, hvor indsatsen er stærkest, og hvilke områder der kræver mere fokus for at holde Ukraine på dagsordenen."</p>
+    <p>Denne visualisering viser, hvordan politikere, har bidraget med opslag og skabt engagement i forskellige lande. Hold musen over et land for at se, hvor mange opslag og interaktioner det har genereret. Dataen giver mulighed for at forstå, hvor indsatsen er stærkest, og hvilke områder der kræver mere fokus for at holde Ukraine på dagsordenen.</p>
     </div>
 </div>
 <div class="map_container">
@@ -108,12 +107,36 @@
         </div>
     </div>
 </div>
+<div class="conclusion_container">
+    <div class="conlustion_main_container">
+    <div class="conclusion_header">
+        <h2>Konklusion</h2>
+    </div>
+    <div class="conclusion_list">
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
+        <footer>Af Christian, Elias, Felix, Jeppe</footer>
+    </div>
+</div>
+
+
+
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://d3js.org/d3.v7.min.js"></script>
 <script src="euro-map.js"></script>
-<canvas id="myChart" width="auto" height="100%"></canvas>
-<canvas id="" width="auto" height="100%"></canvas>
 <script type="module" src="main.js"></script>
 </body>
 </html>
