--- a/index.html
+++ b/index.html
@@ -113,8 +113,13 @@
         <h2>Konklusion</h2>
     </div>
     <div class="conclusion_list">
+        <p>Vores dataanalyse viser, at Ukraine er ved at glide ud af den offentlige bevidsthed, hvilket ses i et markant fald i antallet af opslag og gennemsnitlige interaktioner over tid. Dataene peger dog også på strategier og muligheder, der kan styrke opmærksomheden om Ukraine.</p>
         <ul>
-            <li></li>
+            <li>
+                Politisk kommunikation spiller en central rolle i at fastholde Ukraine i den offentlige debat.
+                Lande som Tyskland og Danmark skaber høje interaktioner gennem opslag,
+                mens mindre aktive lande som Schweiz og Wales (Storbritannien) rummer et stort potentiale for forbedring.
+            </li>
             <li></li>
             <li></li>
             <li></li>
