new css for conclusion

--- a/index.html
+++ b/index.html
@@ -116,18 +116,10 @@
         <p>Vores dataanalyse viser, at Ukraine er ved at glide ud af den offentlige bevidsthed, hvilket ses i et markant fald i antallet af opslag og gennemsnitlige interaktioner over tid. Dataene peger dog også på strategier og muligheder, der kan styrke opmærksomheden om Ukraine.</p>
         <ul>
             <li>
-                Politisk kommunikation spiller en central rolle i at fastholde Ukraine i den offentlige debat.
+                Politisk og media kommunikation spiller en central rolle i at fastholde Ukraine i den offentlige debat.
                 Lande som Tyskland og Danmark skaber høje interaktioner gennem opslag,
                 mens mindre aktive lande som Schweiz og Wales (Storbritannien) rummer et stort potentiale for forbedring.
             </li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
             <li></li>
             <li></li>
         </ul>
