--- a/index.html
+++ b/index.html
@@ -120,8 +120,17 @@
                 Lande som Tyskland og Danmark skaber høje interaktioner gennem opslag,
                 mens mindre aktive lande som Schweiz og Wales (Storbritannien) rummer et stort potentiale for forbedring.
             </li>
-            <li></li>
-            <li></li>
+            <li>
+                Ordene Ukraine, Rusland og krig dominerer kommunikationen, mens ord som støtte og invasion er blandt de mindst anvendte.
+                Dette antyder en udfordring i at fremhæve budskaber, der fokuserer på opbakning og konkrete handlinger.
+            </li>
+            <li>
+                Videoer og statusopdateringer skaber den største rækkevidde og flest interaktioner. Derudover må opslaget ikke være for langt, men heller ikke for kort.
+                Dette understreger, at det er vigtigt at prioritere visuelle og letfordøjelige formater i kommunikationen.
+            </li>
+            <li>
+                interaktioner og mængden af opslag varierer kraftigt mellem lande. For at styrke debatten bør man fokusere på at mobilisere politikere i lavere engagerede lande.
+            </li>
         </ul>
     </div>
         <footer>Af Christian, Elias, Felix, Jeppe</footer>
