--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 </div>
 <div class="map_page">
     <div class="map_tekst_container">
-    <h2>Hvordan kan vi forhindre, at Ukraine glider ud af den offentlige bevidsthed? </h2>
-    <p>Denne visualisering viser, hvordan politikere, har bidraget med opslag og skabt engagement i forskellige lande. Hold musen over et land for at se, hvor mange opslag og interaktioner det har genereret. Dataen giver mulighed for at forstå, hvor indsatsen er stærkest, og hvilke områder der kræver mere fokus for at holde Ukraine på dagsordenen.</p>
+    <h2>Vores data er indsamlet i Centraleuropa! </h2>
+    <p>På kortet kan du se hvordan dataen er fordelt, og kigge på de individuelle landes nøgletal. Der er langt større omtale om Ukraine i Tyskland end i Frankrig og Storbritannien.</p>
     </div>
 </div>
 <div class="map_container">
@@ -53,7 +53,7 @@
 
 <div class="top_word_container">
     <div>
-        <h2>De mest anvendte ord i opslag</h2>
+        <h2>Krig og Politik kommer længere end Penge og Støtte</h2>
     </div>
     <div>
         <div>
@@ -77,7 +77,7 @@
 
 <div class="fifth_container">
 <div>
-    <h2>Politikere eller nyhedsmedier er den mest effektive kommunikations fremgangsmåde</h2>
+    <h2>Politikere og nyhedsmedier har størst rækkevidde!</h2>
 </div>
 <div>
     <div>
@@ -88,7 +88,7 @@
 
 <div class="sixth_container">
     <div>
-        <h2>Hvor langt bør et opslag være for at få flest reaktioner?</h2>
+        <h2>Dit opslag skal hverken være for langt eller for kort!</h2>
     </div>
     <div>
         <div>
