--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <div class="hashtag_container">
     <div>
         <div>
-            <h2>Do not use hashtags in your facebookpost!</h2>
+            <h2>Du skal ikke bruge hashtags i dit facebook-opslag!</h2>
         </div>
         <div>
             <div>
