--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div class="front_page_container">
     <div class="front_page_text_container">
-        <h1 class="main_title">the Public <br> on Ukraine</h1>
+        <h1 class="main_title">Ukraine <br> i fokus</h1>
     </div>
 
 </div>
